syntax = "proto3";

package iamnande.cardmod.refinement.v1;

import "iamnande/cardmod/refinement/v1/refinement.proto";
import "validate/validate.proto";

option go_package = "github.com/iamnande/cardmod/pkg/api/refinementv1;refinementv1";

// Refinement API Service.
service RefinementAPI {

    // Lists a collection of refinements.
    rpc ListRefinements(ListRefinementsRequest) returns (ListRefinementsResponse);

}

// Request schema for the ListRefinements request.
// TODO: pagination, filtering, and sorting
message ListRefinementsRequest {}

// Response schema for the ListRefinements request.
message ListRefinementsResponse {

    // The collection of refinements
    repeated Refinement refinements = 1;

}